@@ -1,5 +1,10 @@
 2004-03-06  Keisuke Nishida  <knishida@wind.sannet.ne.jp>
 
+	* fileio.c (file_open): Open files in the text mode for line
+	sequential files.
+
+2004-03-06  Keisuke Nishida  <knishida@wind.sannet.ne.jp>
+
 	* fileio.c (file_open, file_close): Use fcntl for file locking.
 
 2004-03-06  Keisuke Nishida  <knishida@wind.sannet.ne.jp>
